Fix nav menu color on small screens. Was green. Now blue.

--- a/css/sm-mint.css
+++ b/css/sm-mint.css
@@ -242,7 +242,7 @@
 		border:0;
 		padding:0;
 		/* darken the background of the sub menus */
-		background:rgba(141,184,99,0.2);
+		background:rgba(185, 217, 236, 0.2);
 		-moz-border-radius:0 !important;
 		-webkit-border-radius:0 !important;
 		border-radius:0 !important;
@@ -311,7 +311,7 @@
 ===================*/
 
 	.sm-mint li {
-		border-top:1px solid rgba(141,184,99,0.2);
+		border-top:1px solid rgba(185, 217, 236, 0.8);
 	}
 	.sm-mint li:first-child {
 		border-top:0;
